# SafeGEO

./: .gitignore  CITATION.cff  DATA_LICENSE  README.md  index.html  pyproject.toml  requirements.txt
benchmark/: README.md
benchmark/config/: attack_package_schema.json  source_only_validation_report.json  synthesis_config.yaml
benchmark/prompts/: prediction_schema.json  safegeo_recommendation_system.txt  source_only_simple_prompt.md
benchmark/src/: analyze_safegeo_plan.py  run_safegeo.py  score_safegeo.py
data/: README.md
data/candidate_quality/: test-00000-of-00001.parquet
data/geo_line_annotations/: test-00000-of-00001.parquet
data/instances_manifest/: test-00000-of-00001.parquet
data/labels/: test-00000-of-00006.parquet  test-00001-of-00006.parquet  test-00002-of-00006.parquet  test-00003-of-00006.parquet  test-00004-of-00006.parquet  test-00005-of-00006.parquet
data/quality_distributions/: test-00000-of-00001.parquet
data/requirement_annotations/: test-00000-of-00001.parquet
data/source_annotations/: test-00000-of-00001.parquet
data/targets/: test-00000-of-00001.parquet
data/visible/: test-00000-of-00006.parquet  test-00001-of-00006.parquet  test-00002-of-00006.parquet  test-00003-of-00006.parquet  test-00004-of-00006.parquet  test-00005-of-00006.parquet
docs/: ATTACK_TAXONOMY.md  DATASHEET.md
mitigation/: README.md
mitigation/config/: mitigation_experiment.yaml  (+1 more)
scripts/: build_sample.py  make_mock_predictions.py  run_benchmark.sh  run_mitigation.sh
tests/: test_io.py  test_mock.py  test_serving.py  test_taxonomy.py
(+30 files in other folders)
